FreeBSD Handbook: preface: de-link FreeBSD Mall
Remove the link to
http://www.freebsdmall.com
(the site became unavailable some time ago).

--- a/documentation/content/en/books/handbook/preface/_index.adoc
+++ b/documentation/content/en/books/handbook/preface/_index.adoc
@@ -328,6 +328,6 @@ Several companies have supported the development of this document by paying auth
 In particular, BSDi (subsequently acquired by http://www.windriver.com[Wind River Systems]) paid members of the FreeBSD Documentation Project to work on improving this book full time leading up to the publication of the first printed edition in March 2000 (ISBN 1-57176-241-8).
 Wind River Systems then paid several additional authors to make a number of improvements to the print-output infrastructure and to add additional chapters to the text.
 This work culminated in the publication of the second printed edition in November 2001 (ISBN 1-57176-303-1).
-In 2003-2004, http://www.freebsdmall.com[FreeBSD Mall, Inc], paid several contributors to improve the Handbook in preparation for the third printed edition.
+In 2003-2004, FreeBSD Mall, Inc, paid several contributors to improve the Handbook in preparation for the third printed edition.
 The third printed edition has been split into two volumes.
 Both volumes have been published as The FreeBSD Handbook 3rd Edition Volume 1: User Guide (ISBN 1-57176-327-9) and The FreeBSD Handbook 3rd Edition Volume 2: Administrators Guide (ISBN 1-57176-328-7).
