newbies: add OPNsense
Adapted from
https://docs.opnsense.org/intro.html and
https://docs.opnsense.org/relations/freebsd.html

--- a/website/content/en/projects/newbies.adoc
+++ b/website/content/en/projects/newbies.adoc
@@ -31,6 +31,7 @@ FreeBSD is widely used as a building block for other commercial and open-source 
 * https://www.ghostbsd.org[GhostBSD] is derived from FreeBSD, GhostBSD uses the GTK environment to provide a beautiful looks and comfortable experience on the modern BSD platform offering a natural and native UNIX(R) work environment.
 * https://nomadbsd.org[NomadBSD] is a persistent live system for USB flash drives, based on FreeBSD. Together with automatic hardware detection and setup, it is configured to be used as a desktop system that works out of the box, but can also be used for data recovery, for educational purposes, or to test FreeBSD's hardware compatibility.
 * https://www.midnightbsd.org[MidnightBSD] is a BSD-derived operating system developed with desktop users in mind. It includes all the software you'd expect for your daily tasks: mail, web browsing, word processing, gaming, and much more.
+* Deciso(R) https://opnsense.org/[OPNsense(R)] is an open source, easy-to-use and easy-to-build FreeBSD-based firewall and routing platform. Its team aims to stay as close as possible to the original source. An installation of FreeBSD can easily be converted to run OPNsense.
 * http://www.pfsense.org[pfSense] is a FreeBSD based network security solution. pfSense software, with the help of the package system, is able to provide the same functionality or more of common commercial firewalls, without any of the artificial limitations. It has successfully replaced every big name commercial firewall you can imagine in numerous installations around the world.
 
 == How to Contribute
