--- a/website/content/ru/where.adoc
+++ b/website/content/ru/where.adoc
@@ -236,11 +236,11 @@ a|
 
 Образы виртуальных машин доступны для link:{url-snapshot}/VM-IMAGES/{rel150-current}-STABLE/amd64/Latest/[amd64], link:{url-snapshot}/VM-IMAGES/{rel150-current}-STABLE/aarch64/Latest/[aarch64] и link:{url-snapshot}/VM-IMAGES/{rel150-current}-STABLE/riscv64/Latest/[riscv64].
 
-=== FreeBSD {rel143-current}-STABLE
+=== FreeBSD {rel144-current}-STABLE
 
-Установочные образы и образы карт памяти SD доступны для link:{url-snapshot}/amd64/amd64/ISO-IMAGES/{rel143-current}/[amd64], link:{url-snapshot}/i386/i386/ISO-IMAGES/{rel143-current}/[i386], link:{url-snapshot}/powerpc/powerpc/ISO-IMAGES/{rel143-current}/[powerpc], link:{url-snapshot}/powerpc/powerpc64/ISO-IMAGES/{rel143-current}/[powerpc64], link:{url-snapshot}/powerpc/powerpc64le/ISO-IMAGES/{rel143-current}/[powerpc64le], link:{url-snapshot}/powerpc/powerpcspe/ISO-IMAGES/{rel143-current}/[powerpcspe], link:{url-snapshot}/arm/armv7/ISO-IMAGES/{rel143-current}/[armv7], link:{url-snapshot}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[aarch64] и link:{url-snapshot}/riscv/riscv64/ISO-IMAGES/{rel143-current}/[riscv64].
+Имеются установочные образы и образы карт памяти SD для link:{url-snapshot}/amd64/amd64/ISO-IMAGES/{rel144-current}/[amd64], link:{url-snapshot}/i386/i386/ISO-IMAGES/{rel144-current}/[i386], link:{url-snapshot}/powerpc/powerpc/ISO-IMAGES/{rel144-current}/[powerpc], link:{url-snapshot}/powerpc/powerpc64/ISO-IMAGES/{rel144-current}/[powerpc64], link:{url-snapshot}/powerpc/powerpc64le/ISO-IMAGES/{rel144-current}/[powerpc64le], link:{url-snapshot}/powerpc/powerpcspe/ISO-IMAGES/{rel144-current}/[powerpcspe], link:{url-snapshot}/arm/armv7/ISO-IMAGES/{rel144-current}/[armv7], link:{url-snapshot}/arm64/aarch64/ISO-IMAGES/{rel144-current}/[aarch64] и link:{url-snapshot}/riscv/riscv64/ISO-IMAGES/{rel144-current}/[riscv64].
 
-Образы виртуальных машин доступны для link:{url-snapshot}/VM-IMAGES/{rel143-current}-STABLE/amd64/Latest/[amd64], link:{url-snapshot}/VM-IMAGES/{rel143-current}-STABLE/i386/Latest/[i386], link:{url-snapshot}/VM-IMAGES/{rel143-current}-STABLE/aarch64/Latest/[aarch64] и link:{url-snapshot}/VM-IMAGES/{rel143-current}-STABLE/riscv64/Latest/[riscv64].
+Имеются образы виртуальных машин для link:{url-snapshot}/VM-IMAGES/{rel144-current}-STABLE/amd64/Latest/[amd64], link:{url-snapshot}/VM-IMAGES/{rel144-current}-STABLE/i386/Latest/[i386], link:{url-snapshot}/VM-IMAGES/{rel144-current}-STABLE/aarch64/Latest/[aarch64] и link:{url-snapshot}/VM-IMAGES/{rel144-current}-STABLE/riscv64/Latest/[riscv64].
 
 === FreeBSD {rel135-current}-STABLE
 
@@ -308,5 +308,5 @@ image::../../gifs/fastlyLogo-red-SVG.svg[Fastly Logo,120]
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (29.11.2025): 4b6a7a1cbb717983adf561aa857adbd6b82ffd83
+// Original EN revision (12.02.2026): 2a8863cf7a0355c063512f6bc97a9f5d0ecfb09e
 //
