website/ru: Fix incorrect branch name.

--- a/website/content/ru/releases/15.1R/schedule.adoc
+++ b/website/content/ru/releases/15.1R/schedule.adoc
@@ -34,7 +34,7 @@ include::shared/ru/urls.adoc[]
 |Мероприятие |Ожидаемая дата |Фактическая дата |Описание
 |Первичное объявление графика релиза |- |15 января 2026 |Инженеры подготовки релиза направляют разработчикам сообщение электронной почты с анонсом примерного графика.
 |Напоминание о графике выпуска |3 апреля 2026 |- |Инженеры подготовки релиза направляют разработчикам сообщение электронной почты c напоминанием об анонсе и обновлённым графиком.
-|Начало переходного периода |17 апреля 2026 |- |Инженеры подготовки релиза объявляют о том, что последующие коммиты в ветку {localBranchHead} не будут требовать явного согласования, однако внесения новых функций следует избегать.
+|Начало переходного периода |17 апреля 2026 |- |Инженеры подготовки релиза объявляют о том, что все последующие коммиты в ветку {localBranchStable} не будут требовать явного согласования, однако внесения новых функций следует избегать.
 |Ветка {localBranchReleng} |1 мая 2026 |- |Создаётся ветка {localBranchReleng}; дальнейшая подготовка релиза продолжается в этой ветке.
 |Начало сборок BETA1 |1 мая 2026 |- |Первая промежуточная бета-версия для тестирования.
 |Начало сборок BETA2 |8 мая 2026 |- |Вторая промежуточная бета-версия для тестирования.
