[phb]: Update JAVA_VERSION values.

--- a/documentation/content/en/books/porters-handbook/special/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/special/_index.adoc
@@ -3163,7 +3163,7 @@ If the port needs a Java(TM) Development Kit (JDK(TM)) to either build, run or e
 
 There are several JDKs in the ports collection, from various vendors, and in several versions.
 If the port must use a particular version, specify it using the `JAVA_VERSION` variable.
-The most current version is package:java/openjdk18[], with package:java/openjdk17[], package:java/openjdk16[], package:java/openjdk15[], package:java/openjdk14[], package:java/openjdk13[], package:java/openjdk12[], package:java/openjdk11[], package:java/openjdk8[], and package:java/openjdk7[] also available.
+The most current version is package:java/openjdk25[], with package:java/openjdk24[], package:java/openjdk23[], package:java/openjdk22[], package:java/openjdk21[], package:java/openjdk20[], package:java/openjdk17[], package:java/openjdk11[], and package:java/openjdk8[], also available.
 
 [[using-java-variables]]
 .Variables Which May be Set by Ports That Use Java
