--- a/website/content/en/releases/14.4R/relnotes.adoc
+++ b/website/content/en/releases/14.4R/relnotes.adoc
@@ -84,10 +84,41 @@ This section lists the various Security Advisories and Errata Notices since {rel
 | Date
 | Topic
 
-|No advisories.
-|
-|
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:06.xz.asc[FreeBSD-SA-25:06.xz]
+| 2 July 2025
+| Use-after-free in multi-threaded xz decoder
 
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:07.libarchive.asc[FreeBSD-SA-25:07.libarchive]
+| 8 August 2025
+| Integer overflow in libarchive leading to double free
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:08.openssl.asc[FreeBSD-SA-25:08.openssl]
+| 30 September 2025
+| Multiple vulnerabilities in OpenSSL
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:09.netinet.asc[FreeBSD-SA-25:09.netinet]
+| 22 October 2025
+| SO_REUSEPORT_LB breaks man:connect[2] for UDP sockets
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:10.unbound.asc[FreeBSD-SA-25:10.unbound]
+| 26 November 2025
+| Cache poison in local-unbound service
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:11.ipfw.asc[FreeBSD-SA-25:11.ipfw]
+| 16 December 2025
+| ipfw denial of service
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-25:12.rtsold.asc[FreeBSD-SA-25:12.rtsold]
+| 16 December 2025
+| Remote code execution via ND6 Router Advertisements
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:01.openssl.asc[FreeBSD-SA-26:01.openssl]
+| 27 January 2026
+| Multiple vulnerabilities in OpenSSL
+
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-SA-26:02.jail.asc[FreeBSD-SA-26:02.jail]
+|27 January 2026
+|Jail escape by a privileged user via nullfs
 |===
 
 [[errata]]
@@ -100,11 +131,45 @@ This section lists the various Security Advisories and Errata Notices since {rel
 | Date
 | Topic
 
-|No notices.
-|
-|
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:10.asc[FreeBSD-EN-25:10]
+| 2 July 2025
+| Corruption in ZFS replication streams from encrypted datasets
 
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:12.asc[FreeBSD-EN-25:12]
+| 8 August 2025
+| man:bsdinstall[8] not copying the correct loader on systems with
 
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:13.asc[FreeBSD-EN-25:13]
+| 8 August 2025
+| net80211 TKIP crypto support fails for some drivers
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:14.asc[FreeBSD-EN-25:14]
+| 8 August 2025
+| man:route[8] monitor buffers too much when redirected to a file
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:15.asc[FreeBSD-EN-25:15]
+| 16 September 2025
+| arm64 man:syscall[2] allows unprivileged user to panic kernel
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:16.asc[FreeBSD-EN-25:16]
+| 16 September 2025
+| man:copy_file_range[2] fails to set output parameters
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:17.asc[FreeBSD-EN-25:17]
+| 16 September 2025
+| man:bnxt[4] fails to set media type in some cases
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:18.asc[FreeBSD-EN-25:18]
+| 30 September 2025
+| man:freebsd-update[8] installs libraries in incorrect order
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:02.asc[FreeBSD-EN-26:02]
+| 27 January 2026
+| arm64 SVE signal context misalignment
+
+| link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-26:03.asc[FreeBSD-EN-26:03]
+| 27 January 2026
+| The page fault handler fails to zero memory
 |===
 
 [[userland]]
