align postmaster@ alias with website list

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -337,10 +337,10 @@ For any problems regarding Phabricator, please https://bugs.freebsd.org/submit/[
 The Postmaster Team is responsible for mail being correctly delivered to the committers' email address, ensuring that the mailing lists work, and should take measures against possible disruptions of project mail services, such as having troll-, spam- and virus-filters.
 
 * {bapt}
-* {krion}
 * {ler}
 * {philip}
 * {pi}
+* {rea}
 * {vsevolod}
 * {zi}
 
