--- a/website/content/ru/administration.adoc
+++ b/website/content/ru/administration.adoc
@@ -337,10 +337,10 @@ admins mail aliases intentionally left incomplete
 Почтовая команда отвечает за корректную доставку почты на адреса электронной почты коммиттеров, обеспечение работы списков рассылки и должна принимать меры против возможных сбоев в работе почтовых служб проекта, таких как настройка фильтров против троллинга, спама и вирусов.
 
 * {bapt}
-* {krion}
 * {ler}
 * {philip}
 * {pi}
+* {rea}
 * {vsevolod}
 * {zi}
 
