Status/2025Q4/bhyve-cpuid.adoc: Add sponsorship line
This work is sponsored by the FreeBSD Foundation.

Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/status/report-2025-10-2025-12/bhyve-cpuid.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/bhyve-cpuid.adoc
@@ -58,3 +58,5 @@ Ongoing work on this project aims to integrate the existing proof-of-concept wor
 - a user-friendly configuration method to override individual bits, parts or even whole CPUID functions as needed, while keeping the rest of the host CPUID information or a pre-defined CPUID configuration
 - a user-friendly configuration method for the hypervisor signature reported by bhyve
 - a set of predefined CPUID configurations based on common x86 architecture levels, perhaps also including a set of CPUID data for a few real CPU models, and a user-friendly configuration method to choose one for a VM
+
+Sponsor: The FreeBSD Foundation
