--- a/documentation/content/en/articles/freebsd-status-report-process/_index.adoc
+++ b/documentation/content/en/articles/freebsd-status-report-process/_index.adoc
@@ -156,16 +156,14 @@ This section describes how the reviewing and publication process works.
 === Timeline
 
 Reports are always accepted by the status team, but the main collection process happens the last month of each quarter, hence in March, June, September and December.
-Explicit calls for status reports will be sent in those months.
-The months of January, April, July and October are dedicated to putting together the reports submitted during the precedent quarter; this can include waiting for late submissions.
+The months of January, April, July and October are dedicated to putting together the reports submitted during the precedent quarter.
+Reports for the finished quarter are still accepted within the first 14 days of the month, but not later.
 Status reports publication is done during the same months as soon as the report are ready.
 
-All report submissions can have the deadline extended by link:mailto:status-submissions@FreeBSD.org[emailing the status team] up until the extended deadline, which is 8 days after the end of the quarter.
-Entries from the link:https://www.freebsd.org/administration/#t-portmgr[ports management team] default to the extended headline, because of the overlap between status reports and quarterly ports branches.
+Explicit calls for status reports will be sent to remind the deadlines.
 
 Reviewing of submitted reports by people not part of the status team should be essentially complete by mid-January/April/July/October (third-party review slush).
-That is, barring typos or other light copyediting, the status team should be able to start assembling the submissions soon after the 15th.
-Note that this is not a complete freeze, and the status team may still be able to accept reviews then.
+That is, barring typos or other light copyediting, the status team should be able to assemble the submissions starting from the 15th.
 
 [cols="1,2,2,2,2"]
 |===
@@ -177,35 +175,23 @@ Note that this is not a complete freeze, and the status team may still be able t
 |September 1st
 |December 1st
 
-|2 weeks left reminder
+|1 month left reminder
 |March 15th
 |June 15th
 |September 15th
 |December 15th
 
-|Last reminder
-|March 24th
-|June 24th
-|September 24th
-|December 24th
-
-|Standard deadline
+|2 weeks left reminder
 |March 31st
 |June 30th
 |September 30th
 |December 31st
 
-|Extended deadline
-|April 8th
-|July 8th
-|October 8th
-|January 8th
-
-|Third-party review slush
-|April 15th
-|July 15th
-|October 15th
-|January 15th
+|Submissions deadline and Third-party review slush
+|April 14th
+|July 14th
+|October 14th
+|January 14th
 |===
 
 === Call for reports
