Fix package names for exfat and ntfs filesystems

--- a/documentation/content/en/books/handbook/filesystems/_index.adoc
+++ b/documentation/content/en/books/handbook/filesystems/_index.adoc
@@ -131,7 +131,7 @@ Install the exFAT package:
 
 [source,shell]
 ....
-# pkg install exfat
+# pkg install fusefs-exfat
 ....
 
 Before using a FUSE file system, load the man:fusefs[5] kernel module:
@@ -168,7 +168,7 @@ Install the NTFS package:
 
 [source,shell]
 ....
-# pkg install ntfs
+# pkg install fusefs-ntfs
 ....
 
 Before using a FUSE file system, load the man:fusefs[5] kernel module:
