--- a/website/archetypes/release/relnotes.adoc
+++ b/website/archetypes/release/relnotes.adoc
@@ -127,6 +127,11 @@ This section covers changes and additions to userland applications, contributed 
 [[userland-libraries]]
 === Runtime Libraries and API
 
+[[cloud]]
+== Cloud Support
+
+This section covers changes in support for cloud environments.
+
 [[kernel]]
 == Kernel
 
