--- a/website/content/en/releases/14.4R/relnotes.adoc
+++ b/website/content/en/releases/14.4R/relnotes.adoc
@@ -323,6 +323,22 @@ gitref:b4871be3490d[repository=src].
 The PAM library now searches for modules in [.filename]#${LOCALBASE}/lib/security#, in addition to [.filename]#${LOCALBASE}/lib#. This allows PAM modules installed by ports that follow the Linux directory convention to be found and used.
 gitref:65808459e21b[repository=src].
 
+[[cloud]]
+== Cloud Support
+
+This section covers changes in support for cloud environments.
+
+man:nuageinit[7] receives multiple improvements: execution is now logged; uses a fully compliant YAML parser; improves cloud-init compatibility (adds 'runcmd', 'packages', 'fqdn', 'hostname', 'sudo', 'write_files', 'nameservers', 'tzsetup', 'doas'); improves network support with many fixes, adds support for 'wakeonlan', 'set-name', and 'match.driver'; uses man:resolvconf[8]; and only creates the default user when needed. Also adds support for cloud-init, configuration over the network, and package management.
+gitref:548d4b2af90b[repository=src],
+gitref:5444803b745e[repository=src],
+gitref:3a680e954469[repository=src],
+gitref:cbd62452bff6[repository=src],
+gitref:d056f72c358b[repository=src],
+gitref:823f1076c7cd[repository=src],
+gitref:bb3bc92f4df6[repository=src].
+{{< sponsored "OVHCloud" >}}
+
+
 [[kernel]]
 == Kernel
 
