administration: tcberner steps down from core
Approved by:	core

--- a/website/content/en/administration.adoc
+++ b/website/content/en/administration.adoc
@@ -61,9 +61,8 @@ The Core Team is elected by the active developers in the project.
 * {glebius} (Bugmeister Team and Source Management Team Liaison)
 * {hrs} (Foundation Liaison)
 * {lwhsu} (Documentation Engineering Team Liaison)
-* {mat} (Cluster Administrators Team Liaison)
+* {mat} (Cluster Administrators Team and Ports Management Team Liaison)
 * {olivier} (CI Team Liaison)
-* {tcberner} (Ports Management Team Liaison)
 
 [[t-doceng]]
 == FreeBSD Documentation Engineering Team <doceng@FreeBSD.org>
