hardware: Fix platform and support tier links
Reviewed by:		vladlen, carlavilla
Differential Revision:	https://reviews.freebsd.org/D54334

--- a/website/content/en/releases/15.0R/hardware.adoc
+++ b/website/content/en/releases/15.0R/hardware.adoc
@@ -12,6 +12,8 @@ sidenav: download
 :source-highlighter: rouge
 :experimental:
 
+include::shared/en/urls.adoc[]
+
 = FreeBSD {localRel} Hardware Notes
 
 toc::[]
@@ -31,14 +33,14 @@ This section describes the CPU architectures currently supported by the FreeBSD 
 [[proc-amd64]]
 === x86-64
 
-crossref:platforms[amd64,FreeBSD/amd64] supports x86-64 as a fully-supported, crossref:committers-guide[archs,Tier-1] architecture.
+link:/platforms/amd64[FreeBSD/amd64] supports x86-64 as a fully-supported, link:{committers-guide}#archs[Tier-1] architecture.
 Release media is expected to work on all x86-64 machines with at least 256 MiB of RAM.
 This release incorporates optimizations and enhancements to leverage the full capabilities of FreeBSD/amd64-based systems, delivering improved performance across a wide range of workloads.
 
 [[proc-arm-64]]
 === AArch64
 
-crossref:platforms[arm64,FreeBSD/aarch64] supports 64-bit ARM (ARMv9 and ARMv8) as a crossref:committers-guide[archs,Tier-1] architecture.
+link:/platforms/arm[FreeBSD/aarch64] supports 64-bit ARM (ARMv9 and ARMv8) as a link:{committers-guide}#archs[Tier-1] architecture.
 
 The following devices are currently supported:
 
@@ -112,7 +114,7 @@ Zedboard:
 [[proc-arm-32]]
 === AArch32
 
-crossref:platforms[armv7,FreeBSD/armv7] supports 32-bit ARM (ARM-v7 and up) as a crossref:committers-guide[archs,Tier-2] architecture.
+link:/platforms/arm[FreeBSD/armv7] supports 32-bit ARM (ARM-v7 and up) as a link:{committers-guide}#archs[Tier-2] architecture.
 
 The following devices are currently supported:
 
@@ -155,9 +157,9 @@ link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi]:
 [[proc-powerpc]]
 === POWER
 
-FreeBSD supports 64-bit POWER as a crossref:committers-guide[archs,Tier-2] architecture.
+FreeBSD supports 64-bit POWER as a link:{committers-guide}#archs[Tier-2] architecture.
 
-crossref:platforms[powerpc,FreeBSD/powerpc64le] supports 64-bit, bi-endian POWER9 and POWER8, including:
+link:/platforms/ppc[FreeBSD/powerpc64le] supports 64-bit, bi-endian POWER9 and POWER8, including:
 
 IBM:
 
@@ -173,7 +175,7 @@ Raptor CS:
 * Talos II (POWER9)
 * Blackbird (POWER9)
 
-crossref:platforms[powerpc,FreeBSD/powerpc64] supports 64-bit, big-endian POWER9 through POWER4, including the above as well as:
+link:/platforms/ppc[FreeBSD/powerpc64] supports 64-bit, big-endian POWER9 through POWER4, including the above as well as:
 
 A-EON:
 
@@ -191,7 +193,7 @@ IBM:
 [[proc-risc-v]]
 === RISC-V
 
-link:https://wiki.freebsd.org/riscv[FreeBSD/riscv64] supports 64-bit RISC-V as a crossref:committers-guide[archs,Tier-2] architecture.
+link:https://wiki.freebsd.org/riscv[FreeBSD/riscv64] supports 64-bit RISC-V as a link:{committers-guide}#archs[Tier-2] architecture.
 
 RISC-V support represents a significant milestone in the evolution of this open-source operating system.
 FreeBSD was the first operating system to have bootable in-tree support for RISC-V, underscoring its commitment to embracing emerging hardware architectures.
