Add records about new ports committer (nxjoseph)
New author entry for Yusuf Yaman together with the news item and PGP
key added. List of Developers and Contributors updated as well to follow
steps 1-4 of the Committers Guide.

Reviewed by:	osa, vvd (mentors)
Approved by:	osa, vvd (mentors)
Differential Revision: https://reviews.freebsd.org/D55435

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1542,6 +1542,9 @@ include::{include-path}pouria.key[]
 === `{siva}`
 include::{include-path}siva.key[]
 
+=== `{nxjoseph}`
+include::{include-path}nxjoseph.key[]
+
 [[pgpkeys-other]]
 == Other Cluster Account Holders
 
