--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -2555,6 +2555,10 @@
 :nwhitehorn-email: nwhitehorn@FreeBSD.org
 :nwhitehorn: {nwhitehorn-name} <{nwhitehorn-email}>
 
+:nxjoseph-name: Yusuf Yaman
+:nxjoseph-email: nxjoseph@FreeBSD.org
+:nxjoseph: {nxjoseph-name} <{nxjoseph-email}>
+
 :nyan-name: Yoshihiro Takahashi
 :nyan-email: nyan@FreeBSD.org
 :nyan: {nyan-name} <{nyan-email}>
